--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: "Roboto";
+    src:
+        url("./fonts/Roboto-Regular.ttf") format("truetype");
+
+    font-weight:normal;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -27,11 +35,33 @@ body {
 .navigator-container {
     display: flex;
     align-items: center;
+    justify-content: end;
     padding: 6px;
+    margin-right: 32px;
     height: 60px;
     flex-shrink: 0;
     box-sizing: border-box;
 }
+
+.navigator-items {
+    display: flex;
+    padding-left: 32px;
+    box-sizing: border-box;
+    height: 48px;
+    justify-content: flex-end;
+}
+
+.navigator-items > a {
+    margin: 12px;
+    vertical-align: middle;
+    display: inline-block;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+}
+
+.navigator-items > a:hover {
+    text-decoration: underline;
+} 
 
 a {
     appearance: none;
