--- a/style.css
+++ b/style.css
@@ -90,19 +90,30 @@ a {
 }
 
 .search-container {
-    display: block;
-    box-sizing:content-box;
-    z-index: auto;
-    grid-row: 3;
-    align-items:flex-start;
-    justify-content: center;
+    padding: 20px;
+    max-height: 160px;
+    box-sizing: border-box;
 }
 
-input {
+.search-form {
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 584px;
+    padding-top: 6px;
+}
+
+input[type="text"] {
     appearance: none;
     border: none;
     text-decoration: none;
     color: inherit;
+    min-width: 584px;
+    height: 44px;
+    width: auto;
+    border-radius: 24px;
+    border: 1px solid #202124;
 }
 
 input[type="text"]:focus {
@@ -110,14 +121,4 @@ input[type="text"]:focus {
     outline: none;
     text-decoration:none;
     color: inherit;
-}
-
-#search-box {
-    display: flex;
-    min-height: 44px;
-    max-width: 584px;
-    width: auto;
-    border-radius: 2rem;
-    box-shadow: none;
-    border: 1px solid grey;
 }
