--- a/style.css
+++ b/style.css
@@ -79,15 +79,15 @@ a {
 
 .logo-container {
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
 }
 
 .logo {
-    max-height: 100%;
-    max-width: 100%;
-    object-fit: contain;
-    object-position: center bottom;
+    height: 185px;
     width: auto;
 }
+
 
 .search-container {
     padding: 20px;
