--- a/style.css
+++ b/style.css
@@ -114,6 +114,8 @@ input[type="text"] {
     width: auto;
     border-radius: 24px;
     border: 1px solid #202124;
+    font-size: large;
+    padding-left: 30px;
 }
 
 input[type="text"]:focus {
@@ -122,3 +124,4 @@ input[type="text"]:focus {
     text-decoration:none;
     color: inherit;
 }
+
