add style to form title

--- a/style.css
+++ b/style.css
@@ -165,9 +165,23 @@ input[type="text"]:focus {
 
 .advance-search-form {
     display: flex;
-    width: 55vw;
+    width: 50vw;
+    font-family: arial, sans-serif;
+    padding: 35px
 }
 
 .blank-space{
     flex-grow: 1;
+}
+
+.form-title {
+    font-size:16px;
+    font-weight: 400;
+    color: #333;  
+}
+
+.to-do {
+    font-size: 13px;
+    font-weight:700;
+    color: #777;
 }
