--- a/style.css
+++ b/style.css
@@ -170,6 +170,16 @@ input[type="text"]:focus {
     padding: 35px
 }
 
+.advance-search-form > form {
+    width: 100%;
+}
+
+.top-form-container {
+    display: flex;
+    width: 100%;
+    height: auto;
+}
+
 .blank-space{
     flex-grow: 1;
 }
