--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ input[type="text"]:focus {
 }
 
 .form-title {
-    grid-column: 1
+    grid-column: 1;
     font-size:16px;
     font-weight: 400;
     color: #333;  
