--- a/style.css
+++ b/style.css
@@ -197,3 +197,18 @@ input[type="text"]:focus {
     font-weight:700;
     color: #777;
 }
+
+.first-label {
+    grid-column: 1;
+}
+
+.second-label {
+    grid-column: 3
+}
+
+.main-form-container > input[type="text"] {
+    grid-column: 2;
+    border-radius: 0px;
+    border: 1px solid #ccc;
+    margin: 0 1rem;
+}
